testsuite/bsc.typechecker/instances/commit/CommitAncestry.bsv.bsc-out.expected
checking package dependencies
compiling CommitAncestry.bsv
Error: "CommitAncestry.bsv", line 18, column 8: (T0032)
  This expression requires the following proviso which could not be resolved:
    CommitAncestry::Sized#(Bit#(4))
  The proviso was implied by expressions at the following positions:
    "CommitAncestry.bsv", line 21, column 14
  An instance for this proviso exists, but it depends on the following proviso
  for which there is no instance:
    Add#(4, 4, 13)
